Adds anokioda styles

--- a/resources/sass/_ebm-global.scss
+++ b/resources/sass/_ebm-global.scss
@@ -2,18 +2,38 @@
   EBM Global styles
 */
 html {
+  font-size: 14px;
   &::-webkit-scrollbar {
     display: none;
   }
 }
 
-body {}
+body {
+  position: relative;
+}
 
 .site-wrapper,
 .site-content {
   overflow-x: hidden;
   position: relative;
+  min-height: 100vh;
 }
+
+.site-wrapper {
+  transition: transform 0.5s;
+  background-color: white;
+  z-index: 10;
+  &.site-wrapper--move {
+    transform: scale3d(0.7,0.7,1);
+  }
+}
+
+.site-content {
+  background-color: $gray-lightest;
+  padding: get-spacer(3, y) 0;
+}
+
+[v-cloak] { display:none; }
 
 /*
   Media queries
