--- a/public/css/admin/user/profile.css
+++ b/public/css/admin/user/profile.css
@@ -387,12 +387,12 @@ blockquote {
 }
 
 a {
-  color: #0275d8;
+  color: #5bc0de;
   text-decoration: none;
 }
 
 a:focus, a:hover {
-  color: #014c8c;
+  color: #28a1c5;
   text-decoration: underline;
 }
 
@@ -1882,7 +1882,7 @@ mark,
 .form-control:focus {
   color: #464a4c;
   background-color: #fff;
-  border-color: #5cb3fd;
+  border-color: #8693a6;
   outline: none;
 }
 
@@ -2071,21 +2071,21 @@ select.form-control-lg:not([size]):not([multiple]) {
 .has-warning .col-form-label,
 .has-warning .form-check-label,
 .has-warning .custom-control {
-  color: #f0ad4e;
+  color: #b49d52;
 }
 
 .has-warning .form-control {
-  border-color: #f0ad4e;
+  border-color: #b49d52;
 }
 
 .has-warning .input-group-addon {
-  color: #f0ad4e;
-  border-color: #f0ad4e;
-  background-color: white;
+  color: #b49d52;
+  border-color: #b49d52;
+  background-color: #f2eee0;
 }
 
 .has-warning .form-control-warning {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23f0ad4e' d='M4.4 5.324h-.8v-2.46h.8zm0 1.42h-.8V5.89h.8zM3.76.63L.04 7.075c-.115.2.016.425.26.426h7.397c.242 0 .372-.226.258-.426C6.726 4.924 5.47 2.79 4.253.63c-.113-.174-.39-.174-.494 0z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23b49d52' d='M4.4 5.324h-.8v-2.46h.8zm0 1.42h-.8V5.89h.8zM3.76.63L.04 7.075c-.115.2.016.425.26.426h7.397c.242 0 .372-.226.258-.426C6.726 4.924 5.47 2.79 4.253.63c-.113-.174-.39-.174-.494 0z'/%3E%3C/svg%3E");
 }
 
 .has-danger .form-control-feedback,
@@ -2223,7 +2223,7 @@ select.form-control-lg:not([size]):not([multiple]) {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+  box-shadow: 0 0 0 2px rgba(73, 84, 99, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2242,31 +2242,31 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0275d8;
-  border-color: #0275d8;
+  background-color: #495463;
+  border-color: #495463;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #025aa5;
-  border-color: #01549b;
+  background-color: #333b46;
+  border-color: #2f3640;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5);
+  box-shadow: 0 0 0 2px rgba(73, 84, 99, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
-  background-color: #0275d8;
-  border-color: #0275d8;
+  background-color: #495463;
+  border-color: #495463;
 }
 
 .btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #025aa5;
+  background-color: #333b46;
   background-image: none;
-  border-color: #01549b;
+  border-color: #2f3640;
 }
 
 .btn-secondary {
@@ -2358,31 +2358,31 @@ fieldset[disabled] a.btn {
 
 .btn-warning {
   color: #fff;
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
+  background-color: #b49d52;
+  border-color: #b49d52;
 }
 
 .btn-warning:hover {
   color: #fff;
-  background-color: #ec971f;
-  border-color: #eb9316;
+  background-color: #938040;
+  border-color: #8c793d;
 }
 
 .btn-warning:focus, .btn-warning.focus {
-  box-shadow: 0 0 0 2px rgba(240, 173, 78, 0.5);
+  box-shadow: 0 0 0 2px rgba(180, 157, 82, 0.5);
 }
 
 .btn-warning.disabled, .btn-warning:disabled {
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
+  background-color: #b49d52;
+  border-color: #b49d52;
 }
 
 .btn-warning:active, .btn-warning.active,
 .show > .btn-warning.dropdown-toggle {
   color: #fff;
-  background-color: #ec971f;
+  background-color: #938040;
   background-image: none;
-  border-color: #eb9316;
+  border-color: #8c793d;
 }
 
 .btn-danger {
@@ -2415,32 +2415,32 @@ fieldset[disabled] a.btn {
 }
 
 .btn-outline-primary {
-  color: #0275d8;
+  color: #495463;
   background-image: none;
   background-color: transparent;
-  border-color: #0275d8;
+  border-color: #495463;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #0275d8;
-  border-color: #0275d8;
+  background-color: #495463;
+  border-color: #495463;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5);
+  box-shadow: 0 0 0 2px rgba(73, 84, 99, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #0275d8;
+  color: #495463;
   background-color: transparent;
 }
 
 .btn-outline-primary:active, .btn-outline-primary.active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0275d8;
-  border-color: #0275d8;
+  background-color: #495463;
+  border-color: #495463;
 }
 
 .btn-outline-secondary {
@@ -2531,32 +2531,32 @@ fieldset[disabled] a.btn {
 }
 
 .btn-outline-warning {
-  color: #f0ad4e;
+  color: #b49d52;
   background-image: none;
   background-color: transparent;
-  border-color: #f0ad4e;
+  border-color: #b49d52;
 }
 
 .btn-outline-warning:hover {
   color: #fff;
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
+  background-color: #b49d52;
+  border-color: #b49d52;
 }
 
 .btn-outline-warning:focus, .btn-outline-warning.focus {
-  box-shadow: 0 0 0 2px rgba(240, 173, 78, 0.5);
+  box-shadow: 0 0 0 2px rgba(180, 157, 82, 0.5);
 }
 
 .btn-outline-warning.disabled, .btn-outline-warning:disabled {
-  color: #f0ad4e;
+  color: #b49d52;
   background-color: transparent;
 }
 
 .btn-outline-warning:active, .btn-outline-warning.active,
 .show > .btn-outline-warning.dropdown-toggle {
   color: #fff;
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
+  background-color: #b49d52;
+  border-color: #b49d52;
 }
 
 .btn-outline-danger {
@@ -2590,7 +2590,7 @@ fieldset[disabled] a.btn {
 
 .btn-link {
   font-weight: normal;
-  color: #0275d8;
+  color: #5bc0de;
   border-radius: 0;
 }
 
@@ -2607,7 +2607,7 @@ fieldset[disabled] a.btn {
 }
 
 .btn-link:focus, .btn-link:hover {
-  color: #014c8c;
+  color: #28a1c5;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -2767,8 +2767,8 @@ input[type="button"].btn-block {
 }
 
 .card-primary {
-  background-color: #0275d8;
-  border-color: #0275d8;
+  background-color: #495463;
+  border-color: #495463;
 }
 
 .card-primary .card-header,
@@ -2797,8 +2797,8 @@ input[type="button"].btn-block {
 }
 
 .card-warning {
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
+  background-color: #b49d52;
+  border-color: #b49d52;
 }
 
 .card-warning .card-header,
@@ -2818,7 +2818,7 @@ input[type="button"].btn-block {
 
 .card-outline-primary {
   background-color: transparent;
-  border-color: #0275d8;
+  border-color: #495463;
 }
 
 .card-outline-secondary {
@@ -2838,7 +2838,7 @@ input[type="button"].btn-block {
 
 .card-outline-warning {
   background-color: transparent;
-  border-color: #f0ad4e;
+  border-color: #b49d52;
 }
 
 .card-outline-danger {
@@ -2987,11 +2987,11 @@ input[type="button"].btn-block {
 }
 
 .bg-primary {
-  background-color: #0275d8 !important;
+  background-color: #495463 !important;
 }
 
 a.bg-primary:focus, a.bg-primary:hover {
-  background-color: #025aa5 !important;
+  background-color: #333b46 !important;
 }
 
 .bg-success {
@@ -3011,11 +3011,11 @@ a.bg-info:focus, a.bg-info:hover {
 }
 
 .bg-warning {
-  background-color: #f0ad4e !important;
+  background-color: #b49d52 !important;
 }
 
 a.bg-warning:focus, a.bg-warning:hover {
-  background-color: #ec971f !important;
+  background-color: #938040 !important;
 }
 
 .bg-danger {
@@ -3381,11 +3381,11 @@ a.text-muted:focus, a.text-muted:hover {
 }
 
 .text-primary {
-  color: #0275d8 !important;
+  color: #495463 !important;
 }
 
 a.text-primary:focus, a.text-primary:hover {
-  color: #025aa5 !important;
+  color: #333b46 !important;
 }
 
 .text-success {
@@ -3405,11 +3405,11 @@ a.text-info:focus, a.text-info:hover {
 }
 
 .text-warning {
-  color: #f0ad4e !important;
+  color: #b49d52 !important;
 }
 
 a.text-warning:focus, a.text-warning:hover {
-  color: #ec971f !important;
+  color: #938040 !important;
 }
 
 .text-danger {
