--- a/public/css/admin/product/index.css
+++ b/public/css/admin/product/index.css
@@ -8907,3 +8907,58 @@ body {
 .products-list .product-item:hover .title {
   text-decoration: underline;
 }
+
+#upload-documents-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 3rem;
+  z-index: 100;
+}
+
+#upload-documents-modal > div {
+  border-radius: 0.25rem;
+  background-color: white;
+}
+
+#upload-documents-modal .modal-header,
+#upload-documents-modal .modal-footer {
+  min-height: 70px;
+}
+
+#upload-documents-modal .modal-header {
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #f7f7f9;
+}
+
+#upload-documents-modal .modal-header h1, #upload-documents-modal .modal-header h2, #upload-documents-modal .modal-header h3, #upload-documents-modal .modal-header h4, #upload-documents-modal .modal-header h5, #upload-documents-modal .modal-header h6,
+#upload-documents-modal .modal-header .h1, #upload-documents-modal .modal-header .h2, #upload-documents-modal .modal-header .h3, #upload-documents-modal .modal-header .h4, #upload-documents-modal .modal-header .h5, #upload-documents-modal .modal-header .h6,
+#upload-documents-modal .modal-header h1, #upload-documents-modal .modal-header h2, #upload-documents-modal .modal-header h3, #upload-documents-modal .modal-header h4, #upload-documents-modal .modal-header h5, #upload-documents-modal .modal-header h6, #upload-documents-modal .modal-header p, #upload-documents-modal .modal-header span, #upload-documents-modal .modal-header a, #upload-documents-modal .modal-header em, #upload-documents-modal .modal-header i, #upload-documents-modal .modal-header strong, #upload-documents-modal .modal-header li {
+  margin: 0;
+}
+
+#upload-documents-modal .modal-header > div {
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+}
+
+#upload-documents-modal .modal-body {
+  min-height: 20vh;
+}
+
+#upload-documents-modal .modal-footer {
+  border-top: 1px solid #f7f7f9;
+}
