--- a/resources/sass/admin/product/index.scss
+++ b/resources/sass/admin/product/index.scss
@@ -105,4 +105,34 @@ $product-item-height: 81px;
   }
 }
 
-
+$modal-header-height: $header-height-control;
+#upload-documents-modal {
+  @include position(fixed, 0 0 0 0);
+  background-color: rgba(black, 0.7);
+  padding: get-spacer(5, x);
+  z-index: 100;
+  // display: none;
+  > div {
+    border-radius: $border-radius;
+    background-color: white;
+  }
+  .modal-header,
+  .modal-footer {
+    min-height: $modal-header-height;
+  }
+  .modal-header {
+    @include flex-column-center;
+    @include normalize-text;
+    border-bottom: 1px solid $gray-lightest;
+    > div {
+      @include flex-row-space-between;
+      padding: get-spacer(3, y);
+    }
+  }
+  .modal-body {
+    min-height: 20vh;
+  }
+  .modal-footer {
+    border-top: 1px solid $gray-lightest;
+  }
+}
