--- a/resources/sass/common/_dropzone.scss
+++ b/resources/sass/common/_dropzone.scss
@@ -88,7 +88,7 @@ $dropzone-height: 140px;
     position: relative;
     display: inline-block;
     vertical-align: top;
-    margin: 16px;
+    margin: 7px;
     min-height: 100px;
   }
   .dz-preview:hover {
@@ -106,13 +106,9 @@ $dropzone-height: 140px;
     opacity: 1;
   }
   .dz-preview.dz-image-preview {
-    background: white;
+    background: transparent;
   }
   .dz-preview.dz-image-preview .dz-details {
-    -webkit-transition: opacity 0.2s linear;
-    -moz-transition: opacity 0.2s linear;
-    -ms-transition: opacity 0.2s linear;
-    -o-transition: opacity 0.2s linear;
     transition: opacity 0.2s linear;
   }
   .dz-preview .dz-remove {
@@ -171,7 +167,7 @@ $dropzone-height: 140px;
     filter: blur(8px);
   }
   .dz-preview .dz-image {
-    border-radius: 20px;
+    border-radius: $border-radius;
     overflow: hidden;
     width: 120px;
     height: 120px;
@@ -183,30 +179,26 @@ $dropzone-height: 140px;
     display: block;
   }
   .dz-preview.dz-success .dz-success-mark {
-    -webkit-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-    -moz-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-    -ms-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-    -o-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
     animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
   }
   .dz-preview.dz-error .dz-error-mark {
     opacity: 1;
-    -webkit-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
-    -moz-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
-    -ms-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
-    -o-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
     animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
+  }
+  .dz-preview {
+    .dz-error-mark,
+    .dz-success-mark {
+      @include position(absolute, 0);
+      @include align-items(center);
+      @include flex-column-center;
+      width: 100%;
+      height: 100%;
+    }
   }
   .dz-preview .dz-error-mark {
     pointer-events: none;
-    opacity: 0;
     z-index: 500;
-    position: absolute;
-    display: block;
-    top: 50%;
-    left: 50%;
-    margin-left: -27px;
-    margin-top: -27px;
+    opacity: 0;
   }
   .dz-preview .dz-error-mark svg {
     display: block;
@@ -214,26 +206,14 @@ $dropzone-height: 140px;
     height: 54px;
   }
   .dz-preview.dz-processing .dz-progress {
-    opacity: 1;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    -ms-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
+    opacity: 1;
   }
   .dz-preview.dz-complete .dz-progress {
-    opacity: 0;
-    -webkit-transition: opacity 0.4s ease-in;
-    -moz-transition: opacity 0.4s ease-in;
-    -ms-transition: opacity 0.4s ease-in;
-    -o-transition: opacity 0.4s ease-in;
     transition: opacity 0.4s ease-in;
+    opacity: 0;
   }
   .dz-preview:not(.dz-processing) .dz-progress {
-    -webkit-animation: pulse 6s ease infinite;
-    -moz-animation: pulse 6s ease infinite;
-    -ms-animation: pulse 6s ease infinite;
-    -o-animation: pulse 6s ease infinite;
     animation: pulse 6s ease infinite;
   }
   .dz-preview .dz-progress {
@@ -279,10 +259,6 @@ $dropzone-height: 140px;
     display: block;
     display: none;
     opacity: 0;
-    -webkit-transition: opacity 0.3s ease;
-    -moz-transition: opacity 0.3s ease;
-    -ms-transition: opacity 0.3s ease;
-    -o-transition: opacity 0.3s ease;
     transition: opacity 0.3s ease;
     border-radius: 8px;
     font-size: 13px;
