Shows section error on save error

--- a/resources/sass/front/quiz/section.scss
+++ b/resources/sass/front/quiz/section.scss
@@ -38,6 +38,7 @@
 @import "./resources/sass/ebm-global";
 @import "./node_modules/ebm/modules/ebm-header";
 @import "./node_modules/ebm/elements/ebm-section";
+@import "./node_modules/ebm/elements/ebm-alerts";
 
 .section {
   .section-header {
