Updates a elements to medium font-size

--- a/resources/sass/admin/products/catalog.scss
+++ b/resources/sass/admin/products/catalog.scss
@@ -29,6 +29,7 @@
 @import "./resources/sass/ebm-fonts-setup";
 @import "./resources/sass/ebm-fonts";
 @import "./resources/sass/ebm-bootstrap-overrides";
+@import "./node_modules/ebm/control/ebm-text-control";
 @import "./node_modules/ebm/control/ebm-text-responsive-control";
 @import "./node_modules/ebm/control/ebm-flexbox-control";
 @import "./node_modules/ebm/elements/ebm-grid-lists";
