--- a/resources/sass/_ebm-fonts-setup.scss
+++ b/resources/sass/_ebm-fonts-setup.scss
@@ -7,7 +7,7 @@
 // @mixin light-italic { font-family: $font-family-base; font-weight: 300; font-style: italic;}
 @mixin book { font-family: $font-family-base; font-weight: 400; font-style: normal;}
 // @mixin book-italic { font-family: $font-family-base; font-weight: 400; font-style: italic;}
-// @mixin medium { font-family: $font-family-base; font-weight: 500; font-style: normal;}
+@mixin medium { font-family: $font-family-base; font-weight: 500; font-style: normal;}
 // @mixin medium-italic { font-family: $font-family-base; font-weight: 500; font-style: italic;}
 @mixin bold { font-family: $font-family-base; font-weight: 700; font-style: normal;}
 // @mixin bold-italic { font-family: $font-family-base; font-weight: 700; font-style: italic;}
