Allows user to continue with started quiz Adds getUser method to Controller

--- a/resources/sass/front/quiz/new.scss
+++ b/resources/sass/front/quiz/new.scss
@@ -37,3 +37,4 @@
 @import "./resources/sass/ebm-overrides";
 @import "./resources/sass/ebm-global";
 @import "./node_modules/ebm/modules/ebm-header";
+@import "./node_modules/ebm/elements/ebm-alerts";
