Diplays product categories in classify view

--- a/resources/sass/_ebm-variables.scss
+++ b/resources/sass/_ebm-variables.scss
@@ -397,3 +397,6 @@ $xxl-desktop: 1980px;
 
 // box model spacing sizes:
 $spacing-sizes: 3;
+
+// products wrapper
+$products-filter-width: 280px !default;
