Adds products to cart

--- a/resources/sass/front/user/latest-outfit.scss
+++ b/resources/sass/front/user/latest-outfit.scss
@@ -38,6 +38,8 @@
 @import "./resources/sass/ebm-global";
 @import "./node_modules/ebm/modules/ebm-header";
 @import "./node_modules/ebm/elements/ebm-alerts";
+
+@import "./resources/sass/common/top-menu";
 @import "./resources/sass/common/products-list";
 
 .products-list {
