Removes items from cart

--- a/resources/sass/front/cart/show.scss
+++ b/resources/sass/front/cart/show.scss
@@ -93,14 +93,16 @@
     .remove-item {
       position: relative;
       width: 25%;
-      > div {
-        @include position(absolute, 0 0 0 0);
-        @include flex-column-center;
-        text-align: center;
-        height: 100%;
-        &:hover {
-          color: $brand-danger;
-          cursor: pointer;
+      .btn-remove-item {
+        background-color: transparent;
+        border: none;
+      }
+      &:hover {
+        cursor: pointer;
+        .btn-remove-item {
+          i {
+            color: $brand-danger;
+          }
         }
       }
       i {
