--- a/resources/sass/front/shipping/show.scss
+++ b/resources/sass/front/shipping/show.scss
@@ -41,6 +41,7 @@
 
 @import "./resources/sass/common/top-menu";
 @import "./resources/sass/common/sub-header";
+@import "./resources/sass/common/cart-checkout-block";
 
 .shipping-address-wrapper {
   margin-top: 21px;
